crates/fig-parser/tests/snapshots/integration_tests__control_flow__for_nested.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: nested_loops
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: n
            ty: USize
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - For:
              pattern: i
              iterable:
                Call:
                  callee:
                    Path:
                      segments:
                        - range
                  args:
                    - name: ~
                      value:
                        IntegerLiteral:
                          base: Decimal
                          digits: "0"
                          suffix: ~
                    - name: ~
                      value:
                        Path:
                          segments:
                            - n
                  generic_args: ~
                  is_propagating: false
              body:
                statements:
                  - For:
                      pattern: j
                      iterable:
                        Call:
                          callee:
                            Path:
                              segments:
                                - range
                          args:
                            - name: ~
                              value:
                                IntegerLiteral:
                                  base: Decimal
                                  digits: "0"
                                  suffix: ~
                            - name: ~
                              value:
                                Path:
                                  segments:
                                    - n
                          generic_args: ~
                          is_propagating: false
                      body:
                        statements:
                          - Pass
