crates/fig-parser/tests/snapshots/integration_tests__control_flow__for_with_body.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: process
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: data
            ty:
              Array:
                element_type: I32
                size: ~
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - For:
              pattern: item
              iterable:
                Path:
                  segments:
                    - data
              body:
                statements:
                  - Let:
                      annotations: []
                      name: doubled
                      ty: ~
                      value:
                        BinaryOp:
                          lhs:
                            Path:
                              segments:
                                - item
                          op: Multiply
                          rhs:
                            IntegerLiteral:
                              base: Decimal
                              digits: "2"
                              suffix: ~
                  - Let:
                      annotations: []
                      name: clamped
                      ty: ~
                      value:
                        Path:
                          segments:
                            - doubled
                  - Pass
