crates/fig-parser/tests/snapshots/integration_tests__control_flow__if_bool_conditions.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: bool_conditions
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: Bool
          - name: b
            ty: Bool
          - name: x
            ty: I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: LogicalAnd
                  rhs:
                    Path:
                      segments:
                        - b
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: LogicalOr
                  rhs:
                    Path:
                      segments:
                        - b
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - If:
              condition:
                UnaryOp:
                  op: LogicalNot
                  operand:
                    Path:
                      segments:
                        - a
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - If:
              condition:
                BinaryOp:
                  lhs:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - x
                      op: GreaterThan
                      rhs:
                        BinaryOp:
                          lhs:
                            IntegerLiteral:
                              base: Decimal
                              digits: "0"
                              suffix: ~
                          op: LogicalAnd
                          rhs:
                            Path:
                              segments:
                                - x
                  op: LessThan
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "100"
                      suffix: ~
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - If:
              condition:
                BinaryOp:
                  lhs:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - a
                      op: LogicalAnd
                      rhs:
                        BinaryOp:
                          lhs:
                            UnaryOp:
                              op: LogicalNot
                              operand:
                                Path:
                                  segments:
                                    - b
                          op: LogicalOr
                          rhs:
                            Path:
                              segments:
                                - x
                  op: Equal
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
