crates/fig-parser/tests/snapshots/integration_tests__control_flow__if_else.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: abs
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - x
                  op: GreaterThanOrEqual
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              then_body:
                statements:
                  - Return:
                      Path:
                        segments:
                          - x
              elif_clauses: []
              else_body:
                statements:
                  - Return:
                      UnaryOp:
                        op: Negate
                        operand:
                          Path:
                            segments:
                              - x
