crates/fig-parser/tests/snapshots/integration_tests__control_flow__if_many_elif.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: classify
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - x
                  op: LessThan
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              then_body:
                statements:
                  - Pass
              elif_clauses:
                - condition:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - x
                      op: Equal
                      rhs:
                        IntegerLiteral:
                          base: Decimal
                          digits: "0"
                          suffix: ~
                  body:
                    statements:
                      - Pass
                - condition:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - x
                      op: LessThan
                      rhs:
                        IntegerLiteral:
                          base: Decimal
                          digits: "10"
                          suffix: ~
                  body:
                    statements:
                      - Pass
                - condition:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - x
                      op: LessThan
                      rhs:
                        IntegerLiteral:
                          base: Decimal
                          digits: "100"
                          suffix: ~
                  body:
                    statements:
                      - Pass
              else_body:
                statements:
                  - Pass
